# ipc-inspector

./: CMakeLists.txt  README.md  needtodo.txt  run-dash.sh  run-mtex.sh  run.sh
src/: clean.cpp  consumer.cpp  inspector.cpp  inspector_dash.cpp  inspector_mtex.cpp  producer  producer.cpp  ring_buffer.cpp  ring_buffer.h  ring_buffer_mutex.cpp  ring_buffer_mutex.h
src/inspectors/: inspector.cpp  inspector_dash.cpp  inspector_mtex.cpp
src/ipc/: consumer.cpp  producer.cpp
src/producer.dSYM/Contents/Resources/DWARF/: producer
src/producer.dSYM/Contents/Resources/Relocations/aarch64/: producer.yml
